// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationEditPage should render successfully 1`] = `
Array [
  <header
    className="lead-header short  bg-snow"
  >
    <div
      className="row full-width inner--3x"
    >
      <div
        className="large-12 columns"
      >
        <hgroup
          className="lead-header_group"
        >
          <h1
            className="lead-header_title small-serif c-oil"
          >
            Edit Application
          </h1>
          <div
            className="medium-8 columns no-padding"
          >
            <p>
              Application lottery number: 00191270. For listing: Test 5/30
            </p>
          </div>
        </hgroup>
      </div>
    </div>
  </header>,
  <section
    className="tabs-card-row row full-width inner--3x margin-bottom--2x padding-top--2x"
  >
    <div
      className="app-card form-card tabs-card max-width expand-on-small"
    >
      <div>
        <form
          id="shortForm"
          onSubmit={[Function]}
        >
          <div
            className="app-card form-card medium-centered"
          >
            <div
              className="app-inner inset"
            >
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Language Submitted In
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={1}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        English
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        Chinese
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Spanish
                      </option>
                      <option
                        disabled={undefined}
                        value={4}
                      >
                        Tagalog
                      </option>
                    </select>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <h3>
                    Primary Applicant
                  </h3>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="small-4 columns"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="form-label"
                          htmlFor="first_name"
                        >
                          First Name 
                          <span
                            className="checkbox-block_note no-margin"
                          >
                            (required)
                          </span>
                        </label>
                        <input
                          className=""
                          id="first_name"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="karen"
                        />
                      </div>
                    </div>
                    <div
                      className="small-4 columns"
                    >
                      <label>
                        Middle Name
                      </label>
                      <input
                        onBlur={[Function]}
                        onChange={[Function]}
                        value=""
                      />
                    </div>
                    <div
                      className="small-4 columns"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="form-label"
                          htmlFor="last_name"
                        >
                          Last Name 
                          <span
                            className="checkbox-block_note no-margin"
                          >
                            (required)
                          </span>
                        </label>
                        <input
                          className=""
                          id="last_name"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="jones"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Email
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value="eee@eeee.com"
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Phone
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value="9548883321"
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Phone Type
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={2}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        Home
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        Cell
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Work
                      </option>
                    </select>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns form-date-of-birth"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        className="form-label"
                        htmlFor="date_of_birth"
                      >
                        Date of Birth 
                        <span
                          className="checkbox-block_note no-margin"
                        >
                          (required)
                        </span>
                      </label>
                      <div
                        className="form-group-month"
                      >
                        <input
                          className=""
                          id="date_of_birth_month"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="MM"
                          type="number"
                          value="01"
                        />
                      </div>
                      <div
                        className="form-group-day"
                      >
                        <input
                          className=""
                          id="date_of_birth_day"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="DD"
                          type="number"
                          value="01"
                        />
                      </div>
                      <div
                        className="form-group-year"
                      >
                        <input
                          className=""
                          id="date_of_birth_year"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="YYYY"
                          type="number"
                          value="1950"
                        />
                      </div>
                      <div
                        className="d-inline-block"
                      />
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="row"
                  >
                    <h4>
                      Home Address
                    </h4>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="form-group"
                    >
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Street Address
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="123 MAIN ST"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          City
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="SAN FRANCISCO"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          State
                        </label>
                        <input
                          maxLength="2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="CA"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Zip
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="94105-1804"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="row"
                  >
                    <h4>
                      Mailing Address
                    </h4>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="form-group"
                    >
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Street Address
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="123 MAIN ST"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          City
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="SAN FRANCISCO"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          State
                        </label>
                        <input
                          maxLength="2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="CA"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Zip
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="94105-1804"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <h3>
                    Alternate Contact
                  </h3>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="small-4 columns"
                    >
                      <label>
                        First Name
                      </label>
                      <input
                        onBlur={[Function]}
                        onChange={[Function]}
                        value="Federic"
                      />
                    </div>
                    <div
                      className="small-4 columns"
                    >
                      <label>
                        Middle Name
                      </label>
                      <input
                        onBlur={[Function]}
                        onChange={[Function]}
                        value="Daaaa"
                      />
                    </div>
                    <div
                      className="small-4 columns"
                    >
                      <label>
                        Last Name
                      </label>
                      <input
                        onBlur={[Function]}
                        onChange={[Function]}
                        value="dayan"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Alternate Contact Type
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={2}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        Family Member
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        Friend
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Social Worker or Housing Counselor
                      </option>
                      <option
                        disabled={undefined}
                        value={4}
                      >
                        Other
                      </option>
                    </select>
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Alternate Contact Type Other
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value=""
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Agency (if applicable)
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Email
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value="fede@eee.com"
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Phone
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value="9954449943"
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Phone Type
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={2}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        Home
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        Cell
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Work
                      </option>
                    </select>
                  </div>
                </div>
                <div>
                  <div
                    className="row"
                  >
                    <h4>
                      Mailing Address
                    </h4>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="form-group"
                    >
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Street Address
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="123 MAIN ST"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          City
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="SAN FRANCISCO"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          State
                        </label>
                        <input
                          maxLength="2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="CA"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Zip
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="94105-1804"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <h3>
                    Household Members
                  </h3>
                </div>
                <div
                  className="border-bottom margin-bottom--2x"
                >
                  <div>
                    <div
                      className="row"
                    >
                      <div
                        className="form-group"
                      >
                        <div
                          className="small-3 columns"
                        >
                          <div
                            className="form-group"
                          >
                            <label
                              className="form-label"
                              htmlFor="household_members.0.first_name"
                            >
                              First Name 
                              <span
                                className="checkbox-block_note no-margin"
                              >
                                (required)
                              </span>
                            </label>
                            <input
                              className=""
                              id="household_members_0_first_name"
                              onBlur={[Function]}
                              onChange={[Function]}
                              value="diego"
                            />
                          </div>
                        </div>
                        <div
                          className="small-2 columns"
                        >
                          <div
                            className="form-group"
                          >
                            <label
                              className="form-label"
                              htmlFor="household_members.0.middle_name"
                            >
                              Middle Name 
                            </label>
                            <input
                              className=""
                              id="household_members_0_middle_name"
                              onBlur={[Function]}
                              onChange={[Function]}
                              value="m"
                            />
                          </div>
                        </div>
                        <div
                          className="small-3 columns"
                        >
                          <div
                            className="form-group"
                          >
                            <label
                              className="form-label"
                              htmlFor="household_members.0.last_name"
                            >
                              Last Name 
                              <span
                                className="checkbox-block_note no-margin"
                              >
                                (required)
                              </span>
                            </label>
                            <input
                              className=""
                              id="household_members_0_last_name"
                              onBlur={[Function]}
                              onChange={[Function]}
                              value="maradona"
                            />
                          </div>
                        </div>
                        <div
                          className="small-4 columns form-date-of-birth"
                        >
                          <div
                            className="form-group"
                          >
                            <label
                              className="form-label"
                              htmlFor="household_members.0.date_of_birth"
                            >
                              Date of Birth 
                              <span
                                className="checkbox-block_note no-margin"
                              >
                                (required)
                              </span>
                            </label>
                            <div
                              className="form-group-month"
                            >
                              <input
                                className=""
                                id="household_members_0_date_of_birth_month"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="MM"
                                type="number"
                                value="06"
                              />
                            </div>
                            <div
                              className="form-group-day"
                            >
                              <input
                                className=""
                                id="household_members_0_date_of_birth_day"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="DD"
                                type="number"
                                value="11"
                              />
                            </div>
                            <div
                              className="form-group-year"
                            >
                              <input
                                className=""
                                id="household_members_0_date_of_birth_year"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="YYYY"
                                type="number"
                                value="1976"
                              />
                            </div>
                            <div
                              className="d-inline-block"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="row"
                    >
                      <div
                        className="small-12 columns"
                      >
                        <div>
                          <div
                            className="row"
                          >
                            <h4 />
                          </div>
                          <div
                            className="row"
                          >
                            <div
                              className="form-group"
                            >
                              <div
                                className="small-6 columns"
                              >
                                <label>
                                  Street Address
                                </label>
                                <input
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  value="9 de julio"
                                />
                              </div>
                              <div
                                className="small-6 columns"
                              >
                                <label>
                                  City
                                </label>
                                <input
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  value="buenos aires"
                                />
                              </div>
                              <div
                                className="small-6 columns"
                              >
                                <label>
                                  State
                                </label>
                                <input
                                  maxLength="2"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  value="fl"
                                />
                              </div>
                              <div
                                className="small-6 columns"
                              >
                                <label>
                                  Zip
                                </label>
                                <input
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  value="33026"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="form-group"
                    >
                      <div
                        className="small-4 columns"
                      >
                        <button
                          className="mb-4 btn btn-danger"
                          onClick={[Function]}
                          type="button"
                        >
                          Remove
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="small-4 columns"
                    >
                      <button
                        className="mb-4 mr-4 btn btn-success"
                        id="add-additional-member"
                        onClick={[Function]}
                        type="button"
                      >
                        + Additional Member
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <div
                    className="small-12 columns"
                  >
                    <h3>
                      Reserved and Priority Qualifying Information
                    </h3>
                    <h4>
                      Qualifying Information For a Reserved Unit
                    </h4>
                  </div>
                  <div
                    className="small-12 columns margin-bottom--2x"
                  >
                    <div
                      className="small-6 columns"
                    >
                      <label>
                        ADA Priorities Selected
                      </label>
                      <div
                        className="checkbox-group"
                        role="group"
                      >
                        <div
                          className="form-item"
                        >
                          <div
                            className="checkbox"
                          >
                            <input
                              checked={true}
                              id="adaPrioritiesSelected-0"
                              name="adaPrioritiesSelected"
                              onBlur={[Function]}
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <label
                              htmlFor="adaPrioritiesSelected-0"
                            >
                              Mobility impaired
                            </label>
                          </div>
                        </div>
                        <div
                          className="form-item"
                        >
                          <div
                            className="checkbox"
                          >
                            <input
                              checked={true}
                              id="adaPrioritiesSelected-1"
                              name="adaPrioritiesSelected"
                              onBlur={[Function]}
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <label
                              htmlFor="adaPrioritiesSelected-1"
                            >
                              Vision impaired
                            </label>
                          </div>
                        </div>
                        <div
                          className="form-item"
                        >
                          <div
                            className="checkbox"
                          >
                            <input
                              checked={true}
                              id="adaPrioritiesSelected-2"
                              name="adaPrioritiesSelected"
                              onBlur={[Function]}
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <label
                              htmlFor="adaPrioritiesSelected-2"
                            >
                              Hearing impaired
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <h3>
                  Preferences
                </h3>
                <div
                  className="row"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="small-4 columns"
                    >
                      <button
                        className="mb-4 mr-4 btn btn-success"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        + Add Preference
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <h3>
                  Declared Household Income
                </h3>
                <div
                  className="row"
                >
                  <div
                    className="small-6 columns"
                  >
                    <label>
                      Annual Income
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={110000}
                    />
                  </div>
                  <div
                    className="small-6 columns"
                  >
                    <label>
                      Housing Voucher/ Subsidy
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={1}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        true
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        false
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Left Blank
                      </option>
                    </select>
                  </div>
                </div>
              </div>
              <div
                className="checkbox-group"
                role="group"
              >
                <div
                  className="form-item"
                >
                  <div
                    className="checkbox"
                  >
                    <input
                      checked={true}
                      id="agreeToTerms"
                      name="agreeToTerms"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      htmlFor="agreeToTerms"
                    >
                      Signature on Terms of Agreement
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="button-pager"
            >
              <div
                className="button-pager_row primary"
              >
                <button
                  className="primary radius margin-right save-btn"
                  disabled={false}
                  onClick={[Function]}
                  type="submit"
                >
                  Save
                </button>
                <button
                  className="primary radius"
                  disabled={false}
                  onClick={[Function]}
                  type="submit"
                >
                  Save and New
                </button>
              </div>
              <div
                className="button-pager_row primary"
              >
                <a
                  className="primary radius"
                  href="/listings"
                >
                  Cancel
                </a>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </section>,
]
`;

exports[`ApplicationEditPage should render successfully with preferences 1`] = `
Array [
  <header
    className="lead-header short  bg-snow"
  >
    <div
      className="row full-width inner--3x"
    >
      <div
        className="large-12 columns"
      >
        <hgroup
          className="lead-header_group"
        >
          <h1
            className="lead-header_title small-serif c-oil"
          >
            Edit Application
          </h1>
          <div
            className="medium-8 columns no-padding"
          >
            <p>
              Application lottery number: 00191270. For listing: Test 5/30
            </p>
          </div>
        </hgroup>
      </div>
    </div>
  </header>,
  <section
    className="tabs-card-row row full-width inner--3x margin-bottom--2x padding-top--2x"
  >
    <div
      className="app-card form-card tabs-card max-width expand-on-small"
    >
      <div>
        <form
          id="shortForm"
          onSubmit={[Function]}
        >
          <div
            className="app-card form-card medium-centered"
          >
            <div
              className="app-inner inset"
            >
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Language Submitted In
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={1}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        English
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        Chinese
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Spanish
                      </option>
                      <option
                        disabled={undefined}
                        value={4}
                      >
                        Tagalog
                      </option>
                    </select>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <h3>
                    Primary Applicant
                  </h3>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="small-4 columns"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="form-label"
                          htmlFor="first_name"
                        >
                          First Name 
                          <span
                            className="checkbox-block_note no-margin"
                          >
                            (required)
                          </span>
                        </label>
                        <input
                          className=""
                          id="first_name"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="karen"
                        />
                      </div>
                    </div>
                    <div
                      className="small-4 columns"
                    >
                      <label>
                        Middle Name
                      </label>
                      <input
                        onBlur={[Function]}
                        onChange={[Function]}
                        value=""
                      />
                    </div>
                    <div
                      className="small-4 columns"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="form-label"
                          htmlFor="last_name"
                        >
                          Last Name 
                          <span
                            className="checkbox-block_note no-margin"
                          >
                            (required)
                          </span>
                        </label>
                        <input
                          className=""
                          id="last_name"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="jones"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Email
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value="eee@eeee.com"
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Phone
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value="9548883321"
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Phone Type
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={2}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        Home
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        Cell
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Work
                      </option>
                    </select>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns form-date-of-birth"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        className="form-label"
                        htmlFor="date_of_birth"
                      >
                        Date of Birth 
                        <span
                          className="checkbox-block_note no-margin"
                        >
                          (required)
                        </span>
                      </label>
                      <div
                        className="form-group-month"
                      >
                        <input
                          className=""
                          id="date_of_birth_month"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="MM"
                          type="number"
                          value="01"
                        />
                      </div>
                      <div
                        className="form-group-day"
                      >
                        <input
                          className=""
                          id="date_of_birth_day"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="DD"
                          type="number"
                          value="01"
                        />
                      </div>
                      <div
                        className="form-group-year"
                      >
                        <input
                          className=""
                          id="date_of_birth_year"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="YYYY"
                          type="number"
                          value="1950"
                        />
                      </div>
                      <div
                        className="d-inline-block"
                      />
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="row"
                  >
                    <h4>
                      Home Address
                    </h4>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="form-group"
                    >
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Street Address
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="123 MAIN ST"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          City
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="SAN FRANCISCO"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          State
                        </label>
                        <input
                          maxLength="2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="CA"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Zip
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="94105-1804"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="row"
                  >
                    <h4>
                      Mailing Address
                    </h4>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="form-group"
                    >
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Street Address
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="123 MAIN ST"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          City
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="SAN FRANCISCO"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          State
                        </label>
                        <input
                          maxLength="2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="CA"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Zip
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="94105-1804"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <h3>
                    Alternate Contact
                  </h3>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="small-4 columns"
                    >
                      <label>
                        First Name
                      </label>
                      <input
                        onBlur={[Function]}
                        onChange={[Function]}
                        value="Federic"
                      />
                    </div>
                    <div
                      className="small-4 columns"
                    >
                      <label>
                        Middle Name
                      </label>
                      <input
                        onBlur={[Function]}
                        onChange={[Function]}
                        value="Daaaa"
                      />
                    </div>
                    <div
                      className="small-4 columns"
                    >
                      <label>
                        Last Name
                      </label>
                      <input
                        onBlur={[Function]}
                        onChange={[Function]}
                        value="dayan"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Alternate Contact Type
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={2}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        Family Member
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        Friend
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Social Worker or Housing Counselor
                      </option>
                      <option
                        disabled={undefined}
                        value={4}
                      >
                        Other
                      </option>
                    </select>
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Alternate Contact Type Other
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value=""
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Agency (if applicable)
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Email
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value="fede@eee.com"
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Phone
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value="9954449943"
                    />
                  </div>
                  <div
                    className="small-4 columns"
                  >
                    <label>
                      Phone Type
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={2}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        Home
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        Cell
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Work
                      </option>
                    </select>
                  </div>
                </div>
                <div>
                  <div
                    className="row"
                  >
                    <h4>
                      Mailing Address
                    </h4>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="form-group"
                    >
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Street Address
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="123 MAIN ST"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          City
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="SAN FRANCISCO"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          State
                        </label>
                        <input
                          maxLength="2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="CA"
                        />
                      </div>
                      <div
                        className="small-6 columns"
                      >
                        <label>
                          Zip
                        </label>
                        <input
                          onBlur={[Function]}
                          onChange={[Function]}
                          value="94105-1804"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <h3>
                    Household Members
                  </h3>
                </div>
                <div
                  className="border-bottom margin-bottom--2x"
                >
                  <div>
                    <div
                      className="row"
                    >
                      <div
                        className="form-group"
                      >
                        <div
                          className="small-3 columns"
                        >
                          <div
                            className="form-group"
                          >
                            <label
                              className="form-label"
                              htmlFor="household_members.0.first_name"
                            >
                              First Name 
                              <span
                                className="checkbox-block_note no-margin"
                              >
                                (required)
                              </span>
                            </label>
                            <input
                              className=""
                              id="household_members_0_first_name"
                              onBlur={[Function]}
                              onChange={[Function]}
                              value="diego"
                            />
                          </div>
                        </div>
                        <div
                          className="small-2 columns"
                        >
                          <div
                            className="form-group"
                          >
                            <label
                              className="form-label"
                              htmlFor="household_members.0.middle_name"
                            >
                              Middle Name 
                            </label>
                            <input
                              className=""
                              id="household_members_0_middle_name"
                              onBlur={[Function]}
                              onChange={[Function]}
                              value="m"
                            />
                          </div>
                        </div>
                        <div
                          className="small-3 columns"
                        >
                          <div
                            className="form-group"
                          >
                            <label
                              className="form-label"
                              htmlFor="household_members.0.last_name"
                            >
                              Last Name 
                              <span
                                className="checkbox-block_note no-margin"
                              >
                                (required)
                              </span>
                            </label>
                            <input
                              className=""
                              id="household_members_0_last_name"
                              onBlur={[Function]}
                              onChange={[Function]}
                              value="maradona"
                            />
                          </div>
                        </div>
                        <div
                          className="small-4 columns form-date-of-birth"
                        >
                          <div
                            className="form-group"
                          >
                            <label
                              className="form-label"
                              htmlFor="household_members.0.date_of_birth"
                            >
                              Date of Birth 
                              <span
                                className="checkbox-block_note no-margin"
                              >
                                (required)
                              </span>
                            </label>
                            <div
                              className="form-group-month"
                            >
                              <input
                                className=""
                                id="household_members_0_date_of_birth_month"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="MM"
                                type="number"
                                value="06"
                              />
                            </div>
                            <div
                              className="form-group-day"
                            >
                              <input
                                className=""
                                id="household_members_0_date_of_birth_day"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="DD"
                                type="number"
                                value="11"
                              />
                            </div>
                            <div
                              className="form-group-year"
                            >
                              <input
                                className=""
                                id="household_members_0_date_of_birth_year"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="YYYY"
                                type="number"
                                value="1976"
                              />
                            </div>
                            <div
                              className="d-inline-block"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="row"
                    >
                      <div
                        className="small-12 columns"
                      >
                        <div>
                          <div
                            className="row"
                          >
                            <h4 />
                          </div>
                          <div
                            className="row"
                          >
                            <div
                              className="form-group"
                            >
                              <div
                                className="small-6 columns"
                              >
                                <label>
                                  Street Address
                                </label>
                                <input
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  value="9 de julio"
                                />
                              </div>
                              <div
                                className="small-6 columns"
                              >
                                <label>
                                  City
                                </label>
                                <input
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  value="buenos aires"
                                />
                              </div>
                              <div
                                className="small-6 columns"
                              >
                                <label>
                                  State
                                </label>
                                <input
                                  maxLength="2"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  value="fl"
                                />
                              </div>
                              <div
                                className="small-6 columns"
                              >
                                <label>
                                  Zip
                                </label>
                                <input
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  value="33026"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="form-group"
                    >
                      <div
                        className="small-4 columns"
                      >
                        <button
                          className="mb-4 btn btn-danger"
                          onClick={[Function]}
                          type="button"
                        >
                          Remove
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="small-4 columns"
                    >
                      <button
                        className="mb-4 mr-4 btn btn-success"
                        id="add-additional-member"
                        onClick={[Function]}
                        type="button"
                      >
                        + Additional Member
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <div
                  className="row"
                >
                  <div
                    className="small-12 columns"
                  >
                    <h3>
                      Reserved and Priority Qualifying Information
                    </h3>
                    <h4>
                      Qualifying Information For a Reserved Unit
                    </h4>
                  </div>
                  <div
                    className="small-12 columns margin-bottom--2x"
                  >
                    <div
                      className="small-6 columns"
                    >
                      <label>
                        ADA Priorities Selected
                      </label>
                      <div
                        className="checkbox-group"
                        role="group"
                      >
                        <div
                          className="form-item"
                        >
                          <div
                            className="checkbox"
                          >
                            <input
                              checked={true}
                              id="adaPrioritiesSelected-0"
                              name="adaPrioritiesSelected"
                              onBlur={[Function]}
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <label
                              htmlFor="adaPrioritiesSelected-0"
                            >
                              Mobility impaired
                            </label>
                          </div>
                        </div>
                        <div
                          className="form-item"
                        >
                          <div
                            className="checkbox"
                          >
                            <input
                              checked={true}
                              id="adaPrioritiesSelected-1"
                              name="adaPrioritiesSelected"
                              onBlur={[Function]}
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <label
                              htmlFor="adaPrioritiesSelected-1"
                            >
                              Vision impaired
                            </label>
                          </div>
                        </div>
                        <div
                          className="form-item"
                        >
                          <div
                            className="checkbox"
                          >
                            <input
                              checked={true}
                              id="adaPrioritiesSelected-2"
                              name="adaPrioritiesSelected"
                              onBlur={[Function]}
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <label
                              htmlFor="adaPrioritiesSelected-2"
                            >
                              Hearing impaired
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <h3>
                  Preferences
                </h3>
                <div
                  className="border-bottom margin-bottom--2x"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="row "
                    >
                      <div
                        className="columns small-6  "
                      >
                        <label>
                          Preference
                        </label>
                        <select
                          onBlur={[Function]}
                          onChange={[Function]}
                          value={1}
                        >
                          <option
                            disabled={true}
                            value={0}
                          >
                            Select One...
                          </option>
                          <option
                            disabled={undefined}
                            value={1}
                          >
                            Alice Griffith Housing Development Resident
                          </option>
                          <option
                            disabled={undefined}
                            value={2}
                          >
                            Certificate of Preference (COP)
                          </option>
                        </select>
                      </div>
                      <div
                        className="columns   "
                      >
                        <div
                          className="row form-grid"
                        >
                          <div
                            className="columns small-3  form-grid_item"
                          >
                            <div
                              className="form-group"
                            >
                              <label
                                className="form-label"
                                htmlFor="preferences.0.naturalKey"
                              >
                                HH Member on Proof 
                                <span
                                  className="checkbox-block_note no-margin"
                                >
                                  (required)
                                </span>
                              </label>
                              <select
                                className=""
                                id="alice-griffith-hh-member-on-proof"
                                onBlur={[Function]}
                                onChange={[Function]}
                                value={0}
                              >
                                <option
                                  disabled={true}
                                  value={0}
                                >
                                  Select One...
                                </option>
                                <option
                                  disabled={undefined}
                                  value={1}
                                >
                                  karen jones
                                </option>
                                <option
                                  disabled={undefined}
                                  value={2}
                                >
                                  diego maradona
                                </option>
                              </select>
                            </div>
                          </div>
                          <div
                            className="columns small-3 end form-grid_item"
                          >
                            <div
                              className="form-group"
                            >
                              <label
                                className="form-label"
                                htmlFor="preferences.0.type_of_proof"
                              >
                                Type of Proof 
                                <span
                                  className="checkbox-block_note no-margin"
                                >
                                  (required)
                                </span>
                              </label>
                              <select
                                className=""
                                id="alice-griffith-type-of-proof"
                                onBlur={[Function]}
                                onChange={[Function]}
                                value={0}
                              >
                                <option
                                  disabled={true}
                                  value={0}
                                >
                                  Select One...
                                </option>
                                <option
                                  disabled={undefined}
                                  value={1}
                                >
                                  Letter from SFHA verifying address
                                </option>
                                <option
                                  disabled={undefined}
                                  value={2}
                                >
                                  CA ID or Driver's License
                                </option>
                                <option
                                  disabled={undefined}
                                  value={3}
                                >
                                  Telephone bill (landline only)
                                </option>
                                <option
                                  disabled={undefined}
                                  value={4}
                                >
                                  Cable and internet bill
                                </option>
                                <option
                                  disabled={undefined}
                                  value={5}
                                >
                                  Paystub (listing home address)
                                </option>
                                <option
                                  disabled={undefined}
                                  value={6}
                                >
                                  Public benefits record
                                </option>
                                <option
                                  disabled={undefined}
                                  value={7}
                                >
                                  School record
                                </option>
                              </select>
                            </div>
                          </div>
                        </div>
                        <div
                          className="row form-grid"
                        >
                          <div
                            className="columns small-6  form-grid_item"
                          >
                            <div
                              className="form-group"
                            >
                              <label
                                className="form-label"
                                htmlFor="preferences.0.street"
                              >
                                Alice Griffith Address 
                                <span
                                  className="checkbox-block_note no-margin"
                                >
                                  (required)
                                </span>
                              </label>
                              <input
                                className=""
                                id="preferences.0.street"
                                onBlur={[Function]}
                                onChange={[Function]}
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          className="row form-grid"
                        >
                          <div
                            className="columns small-3  form-grid_item"
                          >
                            <div
                              className="form-group"
                            >
                              <label
                                className="form-label"
                                htmlFor="preferences.0.city"
                              >
                                City 
                              </label>
                              <input
                                className=""
                                id="preferences.0.city"
                                onBlur={[Function]}
                                onChange={[Function]}
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            className="columns small-3 end form-grid_item"
                          >
                            <div
                              className="row "
                            >
                              <div
                                className="columns small-6  "
                              >
                                <div
                                  className="form-group"
                                >
                                  <label
                                    className="form-label"
                                    htmlFor="preferences.0.state"
                                  >
                                    State 
                                  </label>
                                  <input
                                    className=""
                                    id="preferences.0.state"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    value=""
                                  />
                                </div>
                              </div>
                              <div
                                className="columns small-6 end "
                              >
                                <div
                                  className="form-group"
                                >
                                  <label
                                    className="form-label"
                                    htmlFor="preferences.0.zip_code"
                                  >
                                    Zip 
                                  </label>
                                  <input
                                    className=""
                                    id="preferences.0.zip_code"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <p>
                          Please check to make sure that a document proving the preference address was attached to the application. If no proof document was attached, do not select this preference.
                        </p>
                        <p>
                          MOHCD will verify that the applicant provided a valid address.
                        </p>
                      </div>
                    </div>
                    <div
                      className="row "
                    >
                      <div
                        className="columns small-4  "
                      >
                        <button
                          className="mb-4 btn btn-danger"
                          onClick={[Function]}
                          type="button"
                        >
                          Remove
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="small-4 columns"
                    >
                      <button
                        className="mb-4 mr-4 btn btn-success"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        + Add Preference
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="border-bottom margin-bottom--2x"
              >
                <h3>
                  Declared Household Income
                </h3>
                <div
                  className="row"
                >
                  <div
                    className="small-6 columns"
                  >
                    <label>
                      Annual Income
                    </label>
                    <input
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={110000}
                    />
                  </div>
                  <div
                    className="small-6 columns"
                  >
                    <label>
                      Housing Voucher/ Subsidy
                    </label>
                    <select
                      onBlur={[Function]}
                      onChange={[Function]}
                      value={1}
                    >
                      <option
                        disabled={true}
                        value={0}
                      >
                        Select One...
                      </option>
                      <option
                        disabled={undefined}
                        value={1}
                      >
                        true
                      </option>
                      <option
                        disabled={undefined}
                        value={2}
                      >
                        false
                      </option>
                      <option
                        disabled={undefined}
                        value={3}
                      >
                        Left Blank
                      </option>
                    </select>
                  </div>
                </div>
              </div>
              <div
                className="checkbox-group"
                role="group"
              >
                <div
                  className="form-item"
                >
                  <div
                    className="checkbox"
                  >
                    <input
                      checked={true}
                      id="agreeToTerms"
                      name="agreeToTerms"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      htmlFor="agreeToTerms"
                    >
                      Signature on Terms of Agreement
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="button-pager"
            >
              <div
                className="button-pager_row primary"
              >
                <button
                  className="primary radius margin-right save-btn"
                  disabled={false}
                  onClick={[Function]}
                  type="submit"
                >
                  Save
                </button>
                <button
                  className="primary radius"
                  disabled={false}
                  onClick={[Function]}
                  type="submit"
                >
                  Save and New
                </button>
              </div>
              <div
                className="button-pager_row primary"
              >
                <a
                  className="primary radius"
                  href="/listings"
                >
                  Cancel
                </a>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </section>,
]
`;
